# cpp-service

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  build.sh  build_linux.sh  docker-compose.yml  entrypoint.sh  quickstart.sh  restart.sh  validate.sh
cmake/: manage_jsoncpp.cmake  manage_yamlcpp.cmake
config/: service_config.yaml  service_config_local.yaml
include/: amq_client.h  config_manager.h  inference_engine.h  logger.h  mock_inference_engine.h  sar_atr_service.h  uci_messages.h
src/: amq_client.cpp  config_manager.cpp  main.cpp  mock_inference_engine.cpp  sar_atr_service.cpp  uci_messages.cpp
test_client/: mock_test_client.py  requirements.txt  test_client_config.yaml
test_listener/: listener_config.yaml  uci_listener.py
